// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal renders create preset modal 1`] = `
Array [
  <div
    className="m-input-modal"
  >
    <form
      onSubmit={[Function]}
    >
      <div
        className="m-input-modal__title"
      >
        Save open routes as preset
      </div>
      <div
        className="m-input-modal__input"
      >
        <input
          autoFocus={true}
          onChange={[Function]}
          placeholder="Name your preset…"
          required={true}
        />
      </div>
      <div
        className="m-input-modal__buttons"
      >
        <button
          className="m-input-modal__button"
          onClick={[Function]}
          type="button"
        >
          Cancel
        </button>
        <button
          className="m-input-modal__button-disabled"
          disabled={true}
          type="submit"
        >
          Save
        </button>
      </div>
    </form>
  </div>,
  <div
    className="m-input-modal__overlay"
  />,
]
`;

exports[`Modal renders delete preset modal 1`] = `
Array [
  <div
    className="m-input-modal"
  >
    <div
      className="m-input-modal__title"
    >
      Delete preset?
    </div>
    <div
      className="m-input-modal__text"
    >
      <span
        className="m-input-modal__name-text"
      >
        My Preset
      </span>
    </div>
    <div
      className="m-input-modal__buttons"
    >
      <button
        className="m-input-modal__button"
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        autoFocus={true}
        className="m-input-modal__button-danger"
        onClick={[Function]}
      >
        Confirm
      </button>
    </div>
  </div>,
  <div
    className="m-input-modal__overlay"
  />,
]
`;

exports[`Modal renders inactive notification modal when appropriate 1`] = `
Array [
  <div
    className="c-modal"
  >
    <div
      className="m-inactive-notification-modal__close-button"
    >
      <button
        onClick={[Function]}
      >
        <span
          className=""
          dangerouslySetInnerHTML={
            Object {
              "__html": "SVG",
            }
          }
        />
      </button>
    </div>
    <div
      className="m-notification__title"
    >
      OTHER
       NOTIFICATION
    </div>
    <div
      className="m-inactive-notification-modal__body"
    >
      Sorry, there's no additional information that we can provide you about this notification.
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`Modal renders loading modal when appropriate 1`] = `
Array [
  <div
    className="c-modal m-notification-loading-modal"
  >
    <div
      className="m-notification-loading-modal__spinner-wrapper"
    >
      <span
        className="c-loading-spinner"
        dangerouslySetInnerHTML={
          Object {
            "__html": "SVG",
          }
        }
      />
    </div>
    <div
      className="m-notification-loading-modal__text-wrapper"
    >
      Loading...
    </div>
  </div>,
  <div
    className="c-modal-overlay"
  />,
]
`;

exports[`Modal renders overwrite preset modal 1`] = `
Array [
  <div
    className="m-input-modal"
  >
    <div
      className="m-input-modal__title"
    >
      A preset named
       
      <span
        className="m-input-modal__name-text"
      >
        My Preset
      </span>
       already exists.
    </div>
    <div
      className="m-input-modal__title"
    >
      Overwrite
       
      <span
        className="m-input-modal__name-text"
      >
        My Preset
      </span>
      ?
    </div>
    <div
      className="m-input-modal__buttons"
    >
      <button
        className="m-input-modal__button"
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        autoFocus={true}
        className="m-input-modal__button-confirm"
        onClick={[Function]}
      >
        Save
      </button>
    </div>
  </div>,
  <div
    className="m-input-modal__overlay"
  />,
]
`;

exports[`Modal renders save preset modal 1`] = `
Array [
  <div
    className="m-input-modal"
  >
    <div
      className="m-input-modal__title"
    >
      Overwrite
       
      <span
        className="m-input-modal__name-text"
      >
        My Preset
      </span>
      ?
    </div>
    <div
      className="m-input-modal__buttons"
    >
      <button
        className="m-input-modal__button"
        onClick={[Function]}
      >
        Cancel
      </button>
      <button
        autoFocus={true}
        className="m-input-modal__button-confirm"
        onClick={[Function]}
      >
        Save
      </button>
    </div>
  </div>,
  <div
    className="m-input-modal__overlay"
  />,
]
`;
